--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HAPPY BIRTHDAY ❤️</title>
+<title>HAPPY BIRTHDAY❤️</title>
 
 <style>
 body{
@@ -61,7 +61,7 @@ animation: fall linear forwards;
 
 <div class="container">
 <h1>🎉Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
-<p>Que cette journée soit magique ✨</p>
+<p>Que cette journée soit remplie de joie Enjoy Your Day ✨</p>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
@@ -101,7 +101,7 @@ explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
 },600);
 
 // Pluie d'emojis
-let emojis = ["🎈","🎁","🎊","🎉","❤️","🫶🏽"];
+let emojis = ["🎈","🎁","🎊","😍","🎉","❤️","🫶🏽"];
 for(let i=0;i<40;i++){
 let e = document.createElement("div");
 e.className="emoji";
@@ -114,4 +114,5 @@ document.body.appendChild(e);
 </script>
 
 </body>
+
 </html>
