--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@ animation: fall linear forwards;
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-<h1>🎉Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
+<h1>🎉🎈Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
 <p>Que cette journée soit remplie de joie Enjoy Your Day ✨</p>
+  <h2>❤️❤️Tu comptes énormément pour moi et surtout reste comme tu es✨</h2>
+  <h3>❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘✨</h3>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
@@ -101,7 +103,7 @@ explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
 },600);
 
 // Pluie d'emojis
-let emojis = ["🎈","🎁","🎊","😍","🎉","❤️","🫶🏽"];
+let emojis = ["HBD","🎈","🎁","🎊","😍","🎉","HBD","😘","🥳","❤️","🫶🏽","😍","HBD","🎈","🎁","🎊","😍","🎉","HBD","❤️","🫶🏽","😍"];
 for(let i=0;i<40;i++){
 let e = document.createElement("div");
 e.className="emoji";
@@ -116,3 +118,4 @@ document.body.appendChild(e);
 </body>
 
 </html>
+
