--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@ animation: fall linear forwards;
 <div class="container">
 <h1>🎉🎈Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
 <p>Que cette journée soit remplie de joie Enjoy Your Day ✨</p>
-  <h2>❤️❤️Tu comptes énormément pour moi et surtout reste comme tu es✨</h2>
-  <h3>❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘✨</h3>
+  <h2>❤️❤️Tu comptes énormément pour moi et surtout reste comme tu es😘😘✨</h2>
+  <h3>T'es magnifique avec un ❤️ en OR😍</h3>
+  <h4>❤️❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘😘</h4>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
@@ -118,5 +119,6 @@ document.body.appendChild(e);
 </body>
 
 </html>
+
 
 
