--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HAPPY BIRTHDAY❤️</title>
+<title>HAPPY BIRTHDAY ❤️</title>
 
 <style>
 body{
@@ -60,16 +60,13 @@ animation: fall linear forwards;
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-<h1>🎉🎈Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
-<p>Que cette journée soit remplie de joie Enjoy Your Day ✨</p>
-  <h2>❤️❤️Tu comptes énormément pour moi et surtout reste comme tu es😘😘✨</h2>
-  <h3>T'es magnifique avec un ❤️ en OR😍</h3>
-  <h4>❤️❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘😘</h4>
+<h1>🎉Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
+<p>Que cette journée soit magique ✨</p>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
 <audio id="music" loop>
-<source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_5f9c4f2c6f.mp3?filename=romantic-piano-ambient-110624.mp3" type="audio/mp3">
+<source src="https://www.bensound.com/bensound-music/bensound-sunny.mp3" type="audio/mp3">
 </audio>
 
 <script>
@@ -104,7 +101,7 @@ explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
 },600);
 
 // Pluie d'emojis
-let emojis = ["HBD","🎈","🎁","🎊","😍","🎉","HBD","😘","🥳","❤️","🫶🏽","😍","HBD","🎈","🎁","🎊","😍","🎉","HBD","❤️","🫶🏽","😍"];
+let emojis = ["🎈","🎁","🎊","🎉","❤️","🫶🏽"];
 for(let i=0;i<40;i++){
 let e = document.createElement("div");
 e.className="emoji";
@@ -117,9 +114,4 @@ document.body.appendChild(e);
 </script>
 
 </body>
-
 </html>
-
-
-
-
