--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@ animation: fall linear forwards;
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-<h1>🎉Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
-<p>Que cette journée soit magique ✨</p>
+<h1>🎉🎂Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
+<p>Que cette journée soit remplie de joie🥳🥳 Enjoy your Day🌹✨</p>
+  <h2>😍😍Tu comptes énormément pour moi💋❤️</h2>
+  <h3>🫠💋T'es Une Personne Magnifique🫶🏼Adorable🫠 avec un ❤️ en Or🫶🏼</h3>
+  <h2>❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘</h2>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
 <audio id="music" loop>
-  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_7c2c3c4d62.mp3" type="audio/mp3">
+  <source src="https://cdn.pixabay.com/download/audio/2022/10/18/audio_f2c88cce61.mp3" type="audio/mp3">
 </audio>
 
 <script>
@@ -101,7 +104,7 @@ explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
 },600);
 
 // Pluie d'emojis
-let emojis = ["🎈","🎁","🎊","🎉","❤️","🫶🏽"];
+let emojis = ["HBD","😍","🥰","😘","🎈","🎁","🎊","🎉","❤️","🫶🏽","HBD","🥳","🌹","💋","I❤️U","😍","🎂","🎉","HBD","I❤️U","HBD","😍","🥰","😘","🎈","🎁","🎊","🎉","❤️","🫶🏽","HBD","🥳","🌹","💋","I❤️U","😍","🎂","🎉","HBD","I❤️U"];
 for(let i=0;i<40;i++){
 let e = document.createElement("div");
 e.className="emoji";
@@ -116,3 +119,4 @@ document.body.appendChild(e);
 </body>
 
 </html>
+
