--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ animation: fall linear forwards;
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-<h1>🎉🎂Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</h1>
+<h1><i></i>🎉🎂Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</i></h1>
 <p>Que cette journée soit remplie de joie🥳🥳 Enjoy your Day🌹✨</p>
   <h2>😍😍Tu comptes énormément pour moi💋❤️</h2>
   <h3>🫠💋T'es Une Personne Magnifique🫶🏼Adorable🫠 avec un ❤️ en Or🫶🏼</h3>
-  <h2>❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘😘</h2>
+  <h2>❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘</h2>
 <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
@@ -119,4 +119,5 @@ document.body.appendChild(e);
 </body>
 
 </html>
+
 
