--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 <title>HAPPY BIRTHDAY ❤️</title>
 
 <style>
 body{
-margin:0;
-overflow:hidden;
-background: linear-gradient(to right, #ff758c, #ff7eb3);
-text-align:center;
-color:purple;
-font-family:Arial;
+  margin:0;
+  overflow:hidden;
+  background: linear-gradient(to right, #ff758c, #ff7eb3);
+  text-align:center;
+  color:purple;
+  font-family:Arial;
 }
 
 .container{
-position:absolute;
-top:50%;
-left:50%;
-transform:translate(-50%,-50%);
-z-index:2;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  z-index:2;
 }
 
 h1{
-font-size:45px;
+  font-size:45px;
 }
 
 button{
-padding:15px 25px;
-font-size:20px;
-border:none;
-background:white;
-color:#ff4e88;
-border-radius:10px;
-cursor:pointer;
+  padding:15px 25px;
+  font-size:20px;
+  border:none;
+  background:white;
+  color:#ff4e88;
+  border-radius:10px;
+  cursor:pointer;
 }
 
 canvas{
-position:absolute;
-top:0;
-left:0;
-z-index:1;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:1;
 }
 
 .emoji{
-position:absolute;
-font-size:35px;
-animation: fall linear forwards;
+  position:absolute;
+  font-size:35px;
+  animation: fall linear forwards;
 }
 
 @keyframes fall{
-0%{transform:translateY(-10vh);}
-100%{transform:translateY(110vh);}
+  0%{transform:translateY(-10vh);}
+  100%{transform:translateY(110vh);}
 }
 </style>
 </head>
@@ -60,64 +60,78 @@ animation: fall linear forwards;
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-<h1><i></i>🎉🎂Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</i></h1>
-<p>Que cette journée soit remplie de joie🥳🥳 Enjoy your Day🌹✨</p>
-  <h2>😍😍Tu comptes énormément pour moi💋❤️</h2>
-  <h3>🫠💋T'es Une Personne Magnifique🫶🏼Adorable🫠 avec un ❤️ en Or🫶🏼</h3>
-  <h2>❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘</h2>
-<button onclick="startSecondFireworks()">Clique ici 💘</button>
+  <h1><i>🎉🎂 Joyeux Anniversaire Chérieeeeeeeeeee 🎂❤️</i></h1>
+  <p>Que cette journée soit remplie de joie 🥳🥳 Enjoy your Day 🌹✨</p>
+  <h2>😍😍 Tu comptes énormément pour moi 💋❤️</h2>
+  <h3>🫠💋 T'es une personne magnifique 🫶🏼 avec un ❤️ en or</h3>
+  <h2>❤️❤️❤️❤️❤️❤️ BISOUS 😘😘😘😘😘😘😘</h2>
+  <button onclick="startSecondFireworks()">Clique ici 💘</button>
 </div>
 
-<audio id="music" loop>
+<!-- 🎶 MUSIQUE DOUCE -->
+<audio id="music" preload="auto" loop>
   <source src="https://cdn.pixabay.com/download/audio/2022/10/18/audio_f2c88cce61.mp3" type="audio/mp3">
 </audio>
 
 <script>
+/* 🎆 CANVAS */
 let canvas = document.getElementById("fireworks");
 let ctx = canvas.getContext("2d");
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-function explode(x,y){
-for(let i=0;i<80;i++){
-ctx.beginPath();
-ctx.arc(x + Math.random()*100-50, y + Math.random()*100-50, 3, 0, Math.PI*2);
-ctx.fillStyle = "hsl("+Math.random()*360+",100%,60%)";
-ctx.fill();
-}
+/* 🎶 MUSIQUE */
+let music = document.getElementById("music");
+music.volume = 0.5; // volume doux mais audible
+
+/* 💥 FEU D’ARTIFICE */
+function explode(x, y){
+  for(let i=0;i<80;i++){
+    ctx.beginPath();
+    ctx.arc(
+      x + Math.random()*100 - 50,
+      y + Math.random()*100 - 50,
+      3,
+      0,
+      Math.PI * 2
+    );
+    ctx.fillStyle = "hsl(" + Math.random()*360 + ",100%,60%)";
+    ctx.fill();
+  }
 }
 
-// 🎂 Feu d'artifice automatique à l'ouverture
-window.onload = function(){
-setTimeout(()=>{
-explode(canvas.width/2, canvas.height/3);
-},500);
+/* 🎂 FEU AUTOMATIQUE AU CHARGEMENT */
+window.onload = () => {
+  setTimeout(() => {
+    explode(canvas.width/2, canvas.height/3);
+  }, 500);
 };
 
-// 💘 Deuxième animation au clic
+/* 💘 AU CLIC */
 function startSecondFireworks(){
-document.getElementById("music").play();
 
-// Nouveau feu d’artifice
-setInterval(()=>{
-explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
-},600);
+  /* ▶️ LECTURE MUSIQUE (OBLIGATOIRE AVEC CLIC) */
+  music.play().catch(err => {
+    console.log("Lecture audio bloquée :", err);
+  });
 
-// Pluie d'emojis
-let emojis = ["HBD","😍","🥰","😘","🎈","🎁","🎊","🎉","❤️","🫶🏽","HBD","🥳","🌹","💋","I❤️U","😍","🎂","🎉","HBD","I❤️U","HBD","😍","🥰","😘","🎈","🎁","🎊","🎉","❤️","🫶🏽","HBD","🥳","🌹","💋","I❤️U","😍","🎂","🎉","HBD","I❤️U"];
-for(let i=0;i<40;i++){
-let e = document.createElement("div");
-e.className="emoji";
-e.innerHTML = emojis[Math.floor(Math.random()*emojis.length)];
-e.style.left = Math.random()*100+"vw";
-e.style.animationDuration = (Math.random()*3+2)+"s";
-document.body.appendChild(e);
-}
+  /* 🎆 FEUX EN CONTINU */
+  setInterval(() => {
+    explode(Math.random()*canvas.width, Math.random()*canvas.height/2);
+  }, 600);
+
+  /* 🌧️ PLUIE D’EMOJIS */
+  let emojis = ["HBD","😍","🥰","😘","🎈","🎁","🎊","🎉","❤️","🫶🏽","🥳","🌹","💋","I❤️U","🎂"];
+  for(let i=0;i<40;i++){
+    let e = document.createElement("div");
+    e.className = "emoji";
+    e.innerHTML = emojis[Math.floor(Math.random()*emojis.length)];
+    e.style.left = Math.random()*100 + "vw";
+    e.style.animationDuration = (Math.random()*3 + 2) + "s";
+    document.body.appendChild(e);
+  }
 }
 </script>
 
 </body>
-
 </html>
-
-
