--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@ canvas{
 <canvas id="fireworks"></canvas>
 
 <div class="container">
-  <h1>🎉🎂 Joyeux Anniversaire Chérie 🎂❤️</h1>
-  <p>Que cette journée soit magique ✨🌹</p>
-  <h2>😍 Tu comptes énormément pour moi ❤️</h2>
+  <h1><i>🎉🎂Joyeux Anniversaire Chérieeeeeeeeeee🎂❤️</i></h1>
+<p>Que cette journée soit remplie de joie🥳🥳 Enjoy your Day🌹✨</p>
+  <h2>😍😍Tu comptes énormément pour moi💋❤️</h2>
+  <h3>🫠💋T'es Une Personne Magnifique🫶🏼Adorable🫠 avec un ❤️ en Or🫶🏼</h3>
+  <h2>❤️❤️❤️❤️❤️❤️BISOUS😘😘😘😘😘😘😘</h2>
   <button onclick="startShow()">Clique ici 💘</button>
 </div>
 
@@ -135,7 +137,7 @@ function animateFireworks(){
 
 /* ================= EMOJIS INFINIS ================= */
 function dropEmoji(){
-  const emojis = ["🎉","🎂","❤️","😍","🥰","😘","🎁","🌹","💋","I❤️U","🥳"];
+  const emojis = ["HBD"   ,   "😍"  ,  "🥰" ,  "😘", "🎈" , "🎁", "🎊" , "🎉", "❤️" ,  "🫶🏽" ,   "HBD"   , "🥳", "🌹" ,    "💋"    ,      "I❤️U"    , "😍" , "🎂" , "🎉" , "HBD"   ,    "I❤️U"   ,  "HBD" , "😍" , "🥰" , "😘"  , "🎈"  ,  "🎁" , "🎊" , "🎉" , "❤️" , "🫶🏽" , "HBD" , "🥳" , "🌹" , "💋" , "I❤️U" , "😍" , "🎂", "🎉" , "HBD" , "I❤️U"];
   const e = document.createElement("div");
   e.className = "emoji";
   e.innerHTML = emojis[Math.floor(Math.random()*emojis.length)];
@@ -162,3 +164,4 @@ function startShow(){
 
 </body>
 </html>
+
