--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ function animateFireworks(){
 
 /* ================= EMOJIS INFINIS ================= */
 function dropEmoji(){
-  const emojis = ["HBD"   ,   "😍"  ,  "🥰" ,  "😘", "🎈" , "🎁", "🎊" , "🎉", "❤️" ,  "🫶🏽" ,   "HBD"   , "🥳", "🌹" ,    "💋"    ,      "I❤️U"    , "😍" , "🎂" , "🎉" , "HBD"   ,    "I❤️U"   ,  "HBD" , "😍" , "🥰" , "😘"  , "🎈"  ,  "🎁" , "🎊" , "🎉" , "❤️" , "🫶🏽" , "HBD" , "🥳" , "🌹" , "💋" , "I❤️U" , "😍" , "🎂", "🎉" , "HBD" , "I❤️U"];
+  const emojis = ["HBD"   ,   "😍"  ,  "🥰" ,  "😘", "🎈" , "🎁", "🎊" , "🎂🎂🎂"    ,   "🎉", "❤️" ,  "🫶🏽" ,   "HBD"   , "🥳"  ,   "🎈🎈"  , "🌹" ,    "💋"    ,      "I❤️U"    , "😍" , "🎂🎂🎂" , "🎉" , "HBD"   ,    "I❤️U"   ,  "HBD" , "😍" , "🎂🎂🎂" , "🥰" , "😘"  , "🎈🎈🎈"  ,  "🎁🎁" , "🎊" , "🎉" , "❤️❤️" , "🫶🏽" , "HBD🎂" , "🥳" , "🌹🌹🌹" , "💋" , "I❤️U" , "😍" , "🎂🎂", "🎉🎉🎉" , "HBD🎂" , "I❤️U"];
   const e = document.createElement("div");
   e.className = "emoji";
   e.innerHTML = emojis[Math.floor(Math.random()*emojis.length)];
@@ -164,4 +164,5 @@ function startShow(){
 
 </body>
 </html>
+
 
