--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@ body{
   text-align:center;
   color:purple;
   font-family:Arial;
+  .photo-top-right{
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 220px;        
+  border-radius: 12px;
+  z-index: 5;        
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
 }
 
 .container{
@@ -33,7 +42,7 @@ button{
   border-radius:10px;
   cursor:pointer;
 }
-
+<img src="image0.png" alt="Photo" class="photo-top-right">
 canvas{
   position:absolute;
   top:0;
@@ -164,5 +173,6 @@ function startShow(){
 
 </body>
 </html>
+
 
 
