--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ canvas{
 </head>
 
 <body>
-<img src="C:\ANNIV\image0.png" class="photo-top-right">
+<img src="C:/ANNIV/image0.png" class="photo-top-right">
 <canvas id="fireworks"></canvas>
 
 <div class="container">
@@ -173,6 +173,7 @@ function startShow(){
 
 </body>
 </html>
+
 
 
 
