--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ canvas{
 </head>
 
 <body>
-<img src="C:/ANNIV/image0.png" class="photo-top-right">
+<img src="Téléchargements/image0.png" class="photo-top-right">
 <canvas id="fireworks"></canvas>
 
 <div class="container">
@@ -146,7 +146,7 @@ function animateFireworks(){
 
 /* ================= EMOJIS INFINIS ================= */
 function dropEmoji(){
-  const emojis = ["HBD"   ,   "😍"  ,  "🥰" ,  "😘", "🎈" , "🎁", "🎊" , "🎂🎂🎂"    ,   "🎉", "❤️" ,  "🫶🏽" ,   "HBD"   , "🥳"  ,   "🎈🎈"  , "🌹" ,    "💋"    ,      "I❤️U"    , "😍" , "🎂🎂🎂" , "🎉" , "HBD"   ,    "I❤️U"   ,  "HBD" , "😍" , "🎂🎂🎂" , "🥰" , "😘"  , "🎈🎈🎈"  ,  "🎁🎁" , "🎊" , "🎉" , "❤️❤️" , "🫶🏽" , "HBD🎂" , "🥳" , "🌹🌹🌹" , "💋" , "I❤️U" , "😍" , "🎂🎂", "🎉🎉🎉" , "HBD🎂" , "I❤️U"];
+  const emojis = ["HBD"   ,   "😍"  ,  "🥰" ,  "😘", "🎈" , "🎁",  "💝💝💝"   ,"🎊" , "🎂🎂🎂"    ,   "🎉", "❤️" ,  "🫶🏽" ,   "HBD"   , "🥳"  ,   "🎈🎈"  , "🌹" ,  ,  "💝"  ,   "💋"    ,      "I❤️U"    , "😍" , "🎂🎂🎂" , "🎉" , "HBD"   ,    "I❤️U"   ,  "HBD" , "😍" , "🎂🎂🎂" , "🥰" , "😘"  , "🎈🎈🎈"  ,  "🎁🎁" , "🎊" , "🎉" , "❤️❤️" , "🫶🏽" , "HBD🎂" , "🥳" , "🌹🌹🌹" , "💋" , "I❤️U" , "😍"  ,  "💝💝💝"   , "🎂🎂", "🎉🎉🎉" , "HBD🎂"  ,  "💝"  , "I❤️U"];
   const e = document.createElement("div");
   e.className = "emoji";
   e.innerHTML = emojis[Math.floor(Math.random()*emojis.length)];
@@ -173,6 +173,7 @@ function startShow(){
 
 </body>
 </html>
+
 
 
 
